// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<S /> should bold text when specified 1`] = `
<S
  type="bold"
>
  <Styled(span)
    className={undefined}
    styles={
      Object {
        "base": Object {},
        "context": Object {
          "color": "#ff0",
        },
        "user": undefined,
      }
    }
    type="bold"
  >
    <span
      className="css-1oz8dr5 et9fpyj0"
      type="bold"
    >
      You should read this!
    </span>
  </Styled(span)>
</S>
`;

exports[`<S /> should italicize text when specified 1`] = `
<S
  type="italic"
>
  <Styled(span)
    className={undefined}
    styles={
      Object {
        "base": Object {},
        "context": Object {
          "color": "#ff0",
        },
        "user": undefined,
      }
    }
    type="italic"
  >
    <span
      className="css-1cx0df8 et9fpyj0"
      type="italic"
    >
      This text is italicized!
    </span>
  </Styled(span)>
</S>
`;

exports[`<S /> should underline text when specified 1`] = `
<S
  type="strikethrough"
>
  <Styled(span)
    className={undefined}
    styles={
      Object {
        "base": Object {},
        "context": Object {
          "color": "#ff0",
        },
        "user": undefined,
      }
    }
    type="strikethrough"
  >
    <span
      className="css-1vlogow et9fpyj0"
      type="strikethrough"
    >
      Don’t read this!
    </span>
  </Styled(span)>
</S>
`;

exports[`<S /> should underline text when specified 2`] = `
<S
  type="underline"
>
  <Styled(span)
    className={undefined}
    styles={
      Object {
        "base": Object {},
        "context": Object {
          "color": "#ff0",
        },
        "user": undefined,
      }
    }
    type="underline"
  >
    <span
      className="css-xt7dpi et9fpyj0"
      type="underline"
    >
      This text is underlined!
    </span>
  </Styled(span)>
</S>
`;
